--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,14 @@ hr:not([size]) {
   max-width: 5%;
 }
 
+.hidden {
+  visibility: hidden;
+}
+
+#infoCompte {
+  margin-top: 25%;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
